<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".startpage.InfomacionBusetaConductor">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cerrarSesionButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imagen"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/iconoapp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/general_c"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/generalC"
                android:text="@string/generalC"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/boton_info_c"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/info_vehiculo_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/informacion"
                android:padding="10dp"
                android:text="@string/informacion"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/placa_v"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/recuadros"
                android:hint="@string/placa"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/color_v"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/recuadros"
                android:hint="@string/color"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/entidad_v"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/recuadros"
                android:hint="@string/entidad"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/capacidad_v"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/recuadros"
                android:hint="@string/capacidad"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/ruta_spinner"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/recuadros"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registrarV"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/boton_c"
                android:text="@string/registrar"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCompartirUbicacion"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#26A5FF"
                android:text="Dejar de compartir ubicación"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/registrarV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/cerrarSesionButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:backgroundTint="#408CFF"
        android:text="CERRAR SESIÓN"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>