<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startpage.CrearCuentaP">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_crear_c"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/crearD"
        android:text="@string/crearD"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagen"
        android:layout_width="166dp"
        android:layout_height="167dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/iconoapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nombreC"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:layout_marginTop="260dp"
        android:hint="@string/nom"
        android:background="@drawable/recuadros"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/correoC"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:layout_marginTop="360dp"
        android:hint="@string/correo"
        android:background="@drawable/recuadros"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordC"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:layout_marginTop="460dp"
        android:hint="@string/password"
        android:background="@drawable/recuadros"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fechaNC"
        android:layout_width="216dp"
        android:layout_height="42dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fecha"
        android:text="@string/fecha"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/diaC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/diaC"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginTop="620dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/mesC"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="620dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/yearC"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginTop="620dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrarC"
        android:layout_width="232dp"
        android:layout_height="48dp"
        android:layout_marginTop="684dp"
        android:background="@drawable/boton_c"
        android:text="@string/registrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>