<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startpage.InicioSesionP">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tituloConductor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Inicio de Sesión - Conductor"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagenC"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/iconoapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloConductor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/correo_textoC"
        android:layout_width="240dp"
        android:layout_height="25dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="270dp"
        android:background="@color/white"
        android:contentDescription="@string/correo"
        android:text="@string/correo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/correoC"
        android:layout_width="290dp"
        android:layout_height="54dp"
        android:hint="@string/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo_textoC" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/password_textoC"
        android:layout_width="240dp"
        android:layout_height="25dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="400dp"
        android:background="@color/white"
        android:contentDescription="@string/password"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordC"
        android:layout_width="291dp"
        android:layout_height="54dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textoC" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inicio_sesionC"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginTop="520dp"
        android:background="@drawable/boton"
        android:text="@string/iniciars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/new_passwordC"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="656dp"
        android:background="@color/white"
        android:contentDescription="@string/newpassword"
        android:text="@string/newpassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cambiarAPasajero"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="710dp"
        android:background="@drawable/boton_c"
        android:text="Cambiar a Pasajero"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/crearCuenta_C"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="770dp"
        android:background="@drawable/boton_c"
        android:text="@string/crearC"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>