<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startpage.NotificacionesUsuario">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagen"
        android:layout_width="199dp"
        android:layout_height="156dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/iconoapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/notificacion1"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/recuadros"
        android:hint="@string/notificaciones"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/notificacion2"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:layout_marginTop="344dp"
        android:background="@drawable/recuadros"
        android:hint="@string/notificaciones"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/notificacion3"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:layout_marginTop="415dp"
        android:background="@drawable/recuadros"
        android:hint="@string/notificaciones"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.280"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/notificacion4"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/recuadros"
        android:hint="@string/notificaciones"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home"
        android:layout_width="135dp"
        android:layout_height="78dp"
        android:layout_marginTop="700dp"
        android:text="@string/perfil"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/busetas_cercanas"
        android:layout_width="135dp"
        android:layout_height="78dp"
        android:layout_marginTop="700dp"
        android:text="@string/busetas"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notificacionesP"
        android:layout_width="135dp"
        android:layout_height="78dp"
        android:layout_marginTop="700dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/notificaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>